@@ -15,8 +15,9 @@ April,  , 2023,AnnotSV version 3.3.4
 	=> AnnotSV keeps now the correspondence between “po_P_*_source”, “po_P_*_coord” and “po_P_*_percent” features.
 	- Improvment of the running time (code part: SV partially overlapping with an established benign region)
 	- Remove requirement for ANNOTSV environment variable
-	- Add of the "INSTALL" file (for a basic manual installation)
+	- Add of the "INSTALL_code.sh" and "INSTALL_annotations.sh" bash files (for a basic manual installation)
 	- Add a check of the "#CHROM" header line
+	- Add of the "-variantconvertDir" option (path of the variantconvert directory). By default, the variantconvert tool distributed by annotSV is used.
 
 March, 30, 2023,AnnotSV version 3.3.3
 	- Add bugfix for large input file
